--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "heroku-starter-project",
   "scripts": {
-    "start": "nodemon server.ts",
+    "start": "nodemon express/express.ts",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
     "jest": "jest"
@@ -9,7 +9,9 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "pg": "^8.8.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
@@ -17,6 +19,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
+    "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
