--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
     "target": "es2020",
     "module": "CommonJS",
     "moduleResolution": "node",
-    "lib": ["es2020", "DOM"],
+    "lib": [
+      "es2020",
+      "DOM"
+    ],
     "baseUrl": "./",
     "outDir": "./dist/tsc",
     "noUnusedLocals": true,
