--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "heroku-starter-project",
   "scripts": {
-    "start": "nodemon express/express.ts",
-    "lint": "eslint . --ext .ts",
-    "lint-fix": "eslint . --ext .ts --fix",
+    "start": "gulp",
+    "build-client": "cd ./src/client && npm run build",
+    "server": "nodemon --watch ./src/server ./src/server/server.ts",
+    "deploy": "gulp deploy",
+    "build-and-deploy": "npm run build-client && npm run deploy",
+    "lint": "eslint ./src --ext .ts",
+    "lint-fix": "eslint ./src --ext .ts --fix",
     "jest": "jest"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "pg": "^8.8.0"
+    "create-react-app": "^5.0.1",
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
@@ -19,7 +22,6 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
-    "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
@@ -29,9 +31,11 @@
     "gulp-sass": "^5.1.0",
     "jest": "^28.1.2",
     "nodemon": "^2.0.19",
+    "sass": "^1.53.0",
     "source-map-loader": "^4.0.0",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack-stream": "^7.0.0"
   }
 }
