--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,9 @@
     "target": "es2020",
     "module": "CommonJS",
     "moduleResolution": "node",
-    "lib": [
-      "es2020",
-      "DOM"
-    ],
+    "lib": ["es2020", "DOM"],
     "baseUrl": "./",
-    "outDir": "./dist/tsc",
+    "outDir": "./dist/server",
     "noUnusedLocals": true,
     "sourceMap": true,
     "noUnusedParameters": true,
@@ -18,5 +15,6 @@
     "skipLibCheck": true,
     "strict": true,
     "esModuleInterop": true,
-  }
+  },
+  "include": ["src/server/**/*"]
 }
