--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "create-react-app": "^5.0.1",
-    "express": "^4.18.1"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.5"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
