--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
     "target": "es2020",
     "module": "CommonJS",
     "moduleResolution": "node",
-    "lib": ["es2020", "DOM"],
+    "lib": [
+      "es2020",
+      "DOM"
+    ],
     "baseUrl": "./",
     "outDir": "./dist/server",
     "noUnusedLocals": true,
@@ -16,5 +19,7 @@
     "strict": true,
     "esModuleInterop": true,
   },
-  "include": ["src/server/**/*"]
+  "include": [
+    "src/server/**/*"
+  ]
 }
