--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.6.5"
+    "mongoose": "^6.6.5",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -37,7 +38,6 @@
     "gulp-sass": "^5.1.0",
     "jest": "^28.1.2",
     "kill-port": "^2.0.1",
-    "nodemon": "^2.0.19",
     "sass": "^1.53.0",
     "source-map-loader": "^4.0.0",
     "ts-jest": "^28.0.5",
