--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "skipLibCheck": true,
     "strict": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
   },
   "include": [
     "src/server/**/*",
