--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-and-deploy": "npm run build-client && npm run deploy",
     "lint": "eslint ./src --ext .ts",
     "lint-fix": "eslint ./src --ext .ts --fix",
-    "jest": "jest --watchAll"
+    "test": "jest --forceExit --detectOpenHandles --watchAll --maxWorkers=1"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -29,6 +29,7 @@
     "@types/jest": "^28.1.4",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.0.3",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
@@ -41,6 +42,7 @@
     "node-mocks-http": "^1.12.2",
     "sass": "^1.53.0",
     "source-map-loader": "^4.0.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4",
