--- a/src/client/.eslintrc.json
+++ b/src/client/.eslintrc.json
@@ -1,13 +1,19 @@
 {
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
   "plugins": [
     "testing-library",
-    "jest-dom"
+    "jest-dom",
+    "@typescript-eslint"
   ],
   "extends": [
     "react-app",
     "react-app/jest",
     "plugin:testing-library/react",
-    "plugin:jest-dom/recommended"
+    "plugin:jest-dom/recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
     "indent": [
