--- a/src/client/package.json
+++ b/src/client/package.json
@@ -29,8 +29,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src --ext .ts",
-    "lint-fix": "eslint ./src --ext .ts --fix"
+    "lint": "eslint ./src",
+    "lint-fix": "eslint ./src --fix"
   },
   "eslintConfig": {
     "extends": [
